--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ tinytag = "^1.8.1"
 ruff = "^0.0.275"
 ffmpeg-python = "^0.2.0"
 pillow = "^10.1.0"
+openai = "^1.11.0"
 
 [tool.ruff]
 line-length = 120
