--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ packages = [{include = "assets_directory"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 tinytag = "^1.8.1"
-ruff = "^0.0.275"
+ruff = "^0.2.0"
 ffmpeg-python = "^0.2.0"
 pillow = "^10.1.0"
 openai = "^1.11.0"
+tqdm = "^4.66.1"
 
 [tool.ruff]
 line-length = 120
