--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 ffmpeg-python==0.2.0
 future==1.0.0
+iniconfig==2.0.0
+packaging==24.2
 pillow==11.0.0
+pluggy==1.5.0
+pytest==8.3.4
 tinytag==2.0.0
 tqdm==4.67.1
